--- a/app/globals.css
+++ b/app/globals.css
@@ -1,26 +1,25 @@
 @import "tailwindcss";
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+@font-face{
+  src: url(../public/fonts/iranSansX-light.woff2);
+  font-family: "iransans";
+  font-weight: 500;
 }
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+@font-face{
+  src: url(../public/fonts/iranSansX-bold.woff2);
+  font-family: "iransans";
+  font-weight: 800;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+*{
+  font-family: "iransans"
 }
+
 
 body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  user-select: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
 }
