--- a/app/globals.css
+++ b/app/globals.css
@@ -1,23 +1,24 @@
 @import "tailwindcss";
 
-@font-face{
+@font-face {
   src: url(../public/fonts/iranSansX-light.woff2);
   font-family: "iransans";
   font-weight: 500;
 }
 
-@font-face{
+@font-face {
   src: url(../public/fonts/iranSansX-bold.woff2);
   font-family: "iransans";
   font-weight: 800;
 }
 
-*{
-  font-family: "iransans"
+* {
+  font-family: "iransans";
 }
-
 
 body {
   user-select: none;
-  overflow: hidden;
+  overflow-x: hidden;
+  overflow-y: auto;
+  -webkit-overflow-scrolling: touch;
 }
